SUBDIRS= src

EXTRA_DIST =  \
	ProgrammersGuide.doc \
        libobj60.dsp libobj.vcproj \
	isoencoder60.dsp \
	isoencoder.vcproj \
	include/ac.hpp \
	include/basic.hpp \
	include/BinArCodec.hpp \
	include/bitpack.hpp \
	include/bitstrm.hpp \
	include/blkdec.hpp \
	include/blkenc.hpp \
	include/block.hpp \
	include/cae.h \
	include/codehead.h \
	include/dataStruct.hpp \
	include/dct.hpp \
	include/default.h \
	include/download_filter.h \
	include/dwt.h \
	include/enhcbufdec.hpp \
	include/enhcbufenc.hpp \
	include/entropy.hpp \
	include/errorHandler.hpp \
	include/geom.hpp \
	include/global.hpp \
	include/globals.hpp \
	include/grayc.hpp \
	include/grayf.hpp \
	include/grayi.hpp \
	include/header.h \
	include/huffman.hpp \
	include/idct.hpp \
	include/inbits.h \
	include/mbdec.hpp \
	include/mb.hpp \
	include/mode.hpp \
	include/msg.hpp \
	include/newpred.hpp \
	include/paramset.h \
	include/PEZW_ac.hpp \
	include/PEZW_functions.hpp \
	include/PEZW_mpeg4.hpp \
	include/PEZW_zerotree.hpp \
	include/QM.hpp \
	include/QMUtils.hpp \
	include/quant.hpp \
	include/rrv.hpp \
	include/sesenc.hpp \
	include/ShapeBaseCommon.hpp \
	include/shape_def.hpp \
	include/ShapeEnhDef.hpp \
	include/shape.hpp \
	include/shpdec.hpp \
	include/shpenc.hpp \
	include/startcode.hpp \
	include/states.hpp \
	include/svd.h \
	include/tm5rc.hpp \
	include/tps_enhcbuf.hpp \
	include/transf.hpp \
	include/typeapi.h \
	include/Utils.hpp \
	include/vlc.hpp \
	include/vop.hpp \
	include/vopmbdec.hpp \
	include/vopmbenc.hpp \
	include/vopsedec.hpp \
	include/vopseenc.hpp \
	include/vopses.hpp \
	include/warp.hpp \
	include/wvtfilter.h \
	include/wvtPEZW.hpp \
	include/wvtpezw_tree_codec.hpp \
	include/yuvac.hpp \
	include/yuvai.hpp \
	include/ztscan_common.hpp \
	include/ztscanUtil.hpp 
